Revision history for Net-Statsd-Tiny

{{$NEXT}}

v0.3.1    2018-05-02 20:58:00+01:00 Europe/London
  [Documentation]
  - Rewrote the section about data validation.

  [Toolchain]
  - Removed core and redundant prereqs.

v0.3.0    2018-02-07 23:35:15+00:00 Europe/London
  [Enhancements]
  - Remove the use of most prereqs, so that this module is "Tiny", #2.

  - Backported improvements from Net::Statsd::Lite v0.4.0.

  [Bug Fixes]
  - Sample rates are honoured properly.

v0.2.1    2018-02-06 09:25:32+00:00 Europe/London
  [Tests]
  - Specified a minimum Test::TCP version.

v0.2.0    2018-02-05 17:38:42+00:00 Europe/London
  [Enhancements]
  - Added rate option for logging timings.

v0.1.1    2018-02-05 15:28:33+00:00 Europe/London
  [Bug Fixes]
  - Renamed add_set to set_add, but kept alias for backwards
    compatability.

v0.1.0    2018-02-05 13:30:21+00:00 Europe/London
  - Initial version released.