@@ -1,6 +1,8 @@
 Revision history for Net-Statsd-Tiny
 
 {{$NEXT}}
+  [Incompatable Changes]
+  - Removed deprecated add_set method.
 
 v0.3.1    2018-05-02 20:58:00+01:00 Europe/London
   [Documentation]
